KQED -/src/objects/Giving_Summary_Control__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <picklist>
            <controllingField>Product__c</controllingField>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Type_Rule__c</fullName>
        <label>Gift Type Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Annual GTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkind GTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation/Purchase GTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned GTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital GTR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Giving_Level__c</fullName>
        <label>Giving Level</label>
        <picklist>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Lowell Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Basic - 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Archangel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fringe Benefit Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hundred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archangel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Hundred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Giving_Summary__c</fullName>
        <label>Giving Summary</label>
        <picklist>
            <picklistValues>
                <fullName>Annual Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Campaign Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Giving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lapsed_Window_Start__c</fullName>
        <label>Lapsed Window Start</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Total_Mem_Year_Amount__c</fullName>
        <label>Maximum Total Mem Year Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Total_Mem_Year_Amount__c</fullName>
        <label>Minimum Total Mem Year Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Window_Start__c</fullName>
        <label>Renewal Window Start</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shopper_Threshold__c</fullName>
        <label>Shopper Threshold</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Station_Major_Donor_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating Major Donor Annual Giving level for Station?</description>
        <inlineHelpText>Is this the Major Donor Annual Giving Level for the Station?</inlineHelpText>
        <label>Station Major Donor Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>KCRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Giving Summary Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Station__c</columns>
        <columns>Campaign_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Gift_Type_Rule__c</columns>
        <columns>Giving_Level__c</columns>
        <columns>Giving_Summary__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Lapsed_Window_Start__c</columns>
        <columns>Minimum_Total_Mem_Year_Amount__c</columns>
        <columns>Maximum_Total_Mem_Year_Amount__c</columns>
        <columns>Renewal_Window_Start__c</columns>
        <columns>Shopper_Threshold__c</columns>
        <columns>Station_Major_Donor_Level__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Station__c</field>
            <operation>equals</operation>
            <value>WGBH,KCRW</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GSC-{00000000}</displayFormat>
        <label>Giving Summary Control #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Giving Summary Control</pluralLabel>
    <recordTypes>
        <fullName>Giving_Summary_Control</fullName>
        <active>true</active>
        <label>Giving Summary Control</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>